Ensure input/button colors are correct on Firefox

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -48,6 +48,7 @@ button,
 select,
 textarea {
   background: #fff;
+  color: #000;
   box-shadow: none;
   border-radius: 3px;
   padding: 0.5rem 1rem;
@@ -69,8 +70,9 @@ label{
 }
 
 button{
-  cursor: pointer;
   outline: 0;
+  color: #000;
+  cursor: pointer;
 }
 
 button:hover{
